--- a/m1/w1/d5progetto/start-20220401T085759Z-001/start/assets/css/stile.css
+++ b/m1/w1/d5progetto/start-20220401T085759Z-001/start/assets/css/stile.css
@@ -5,6 +5,7 @@ body{
     line-height: 1.65;
     text-align: center;
     color: #393d41;
+    font-size: 2em;
     
 }
 
@@ -29,7 +30,7 @@ h1{
     color: #25a2c3;
     line-height: 1.5;
     font-weight: 700;
-    font-size: 1.5rem;
+    font-size: 1.5em;
 }
 
 
@@ -54,9 +55,12 @@ p{
     background-image: url(../images/banner.jpg);
     background-size:100%;
     background-repeat: no-repeat;
-    padding-bottom: 300px;
+    background-position-y: center;
 }
 
+.principal h1, .principal p{
+margin-bottom: 80px;
+}
 
 .button-partiamo{
     text-align: center;
@@ -100,9 +104,18 @@ blockquote{
 /*article*/
 aside{
     margin: auto;
-    padding: 50px 15px;
-    border-bottom: solid ;
+    padding: 0 0 50px 0;
+    border: solid ;
     border-color: #dee1e3;
+    width: 80%;
+    margin-bottom: 50px;
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+    overflow: hidden;
+}
+
+aside img{
+    width: 100%;
 }
 
 /*footer*/
