--- a/m1/w2/d2/start/assets/css/stile.css
+++ b/m1/w2/d2/start/assets/css/stile.css
@@ -22,6 +22,9 @@ header {
     box-shadow: 0 3px 3px #444;
     margin-bottom: 1.5em;
     padding: 2em 1.5em;
+    position: sticky;
+    top: 0;
+    z-index: 10;
 }
 header div img {
     margin-bottom: 20px;
@@ -31,6 +34,8 @@ header nav ul {
 }
 header nav li {
     list-style: none;
+    display: inline;
+    padding: 30px;
 }
 header nav li a {
     color: white;
@@ -128,6 +133,9 @@ section{
     box-shadow: 1px 1px 3px 0px rgba(0, 0, 0, 0.5)
 }
 
+ul{
+    list-style-type: none;
+}
 
 h1 {
     font-size: 2.6rem;
