--- a/m1/w2/d4/start2/frase.css
+++ b/m1/w2/d4/start2/frase.css
@@ -15,7 +15,7 @@ div{
 
 .base{
     animation-name: sposta-opacity;
-    animation-duration: 2s, 2s;
+    animation-duration: 6s;
     animation-iteration-count: infinite;
     position: absolute;
 }
@@ -29,18 +29,23 @@ div{
     opacity: 0;
     overflow: hidden;
 }
-
-.parole-1 i:nth-child(2) { 
-    animation-delay: 3s; 
-}
-.parole-1 i:nth-child(3) { 
-    animation-delay: 6s; 
+#interf{
+    animation-delay: 0s;
 }
 
+#single{
+    animation-delay: 2s;
+}
+
+#app{
+    animation-delay: 4s;
+}
 
  @keyframes sposta-opacity{
-    0%{margin-top: -50px; opacity: 0;}
-    50%{margin-top: 0px; opacity: 1;}
-    100%{margin-top: 50px; opacity: 0;}
+    0%{transform: translateY(-50px); opacity: 0;}
+    5%{transform: translateY(0px); opacity: 1;}
+    30%{transform: translateY(0px); opacity: 1;}
+    33%{transform: translateY(50px); opacity: 0;}
+    100%{transform: translateY(50px); opacity: 0;}
 
 } 
