--- a/m1/w2/d5/start/assets/css/stile.css
+++ b/m1/w2/d5/start/assets/css/stile.css
@@ -98,6 +98,9 @@ input:checked + #menu{
     color: white;
     background-color: #0c0633;
     width: 100%;
+    padding-top: 50px;
+    padding-bottom: 50px;
+
 }
 
 .notebook{
@@ -110,6 +113,12 @@ input:checked + #menu{
 /* FOOTER */
 footer{
     background-color: rgb(238, 238, 238);
+}
+
+#address{
+    background-color: rgb(238, 238, 238);
+    text-align: center;
+    
 }
 
 /* contatti */
@@ -244,6 +253,8 @@ table tr:nth-child(9){
         height: 200px;
         padding: 50px 50px 25px 50px;
     }
+
+
 }
 
 
