--- a/m1/w2/d5/start/assets/css/stile.css
+++ b/m1/w2/d5/start/assets/css/stile.css
@@ -182,6 +182,11 @@ table tr:nth-child(9){
         height: 50px;
     }
     
+    #apri-menu, #toggle{
+        display: none;
+    }
+
+
     ul{
         display: flex;
         flex-direction: row;
