--- a/m1/w2/d5/start/assets/css/stile.css
+++ b/m1/w2/d5/start/assets/css/stile.css
@@ -214,6 +214,12 @@ table tr:nth-child(9){
         padding: 100px;
     }
 
+    #info{
+        position: absolute;
+        left: 100px;
+        bottom: 20px;
+    }
+
     .central2{
         display: flex;
         flex-direction: row;
