--- a/m1/w2/d5/start/assets/css/stile.css
+++ b/m1/w2/d5/start/assets/css/stile.css
@@ -76,6 +76,20 @@ input:checked + #menu{
     height: 200px;
 }
 
+#info{
+    animation-name: pulsa;
+    animation-duration: 2s;
+    animation-iteration-count: infinite;
+    box-shadow: 0px 0px 15px black, 0px 0px 15px black;
+}
+
+@keyframes pulsa{
+    0% {box-shadow: 0px 0px 50px black, 0px 0px 50px black;}
+    50%{box-shadow: 0px 0px 1px black, 0px 0px 1px black;}
+    100%{box-shadow: 0px 0px 50px black, 0px 0px 50px black;}
+    
+}
+
 /* MAIN */
 .container1{
     color: white;
