--- a/m1/w3/d5Calcolatrice/css/style.css
+++ b/m1/w3/d5Calcolatrice/css/style.css
@@ -62,6 +62,27 @@ background: radial-gradient(circle, rgba(4,0,255,1) 0%, rgba(129,129,236,1) 0%, 
     
 }
 
+.bordo:hover{
+    transform: scale(1);
+    transition-duration: 2s;
+    
+}
+
+.bordo{
+    animation-name: moveright;
+    animation-duration: 3s;
+    animation-iteration-count: 1;
+
+}
+
+@keyframes moveright{
+    0%{ margin-left:0px;}
+    50%{ margin-left:100%}
+    100%{margin-left:42%;}
+
+
+}
+
 
 input{
     width: 240px;
@@ -107,21 +128,4 @@ button:hover{
     background: radial-gradient(circle, rgba(0,184,255,1) 7%, rgba(129,129,236,1) 49%, rgba(4,0,255,1) 88%);
 } 
 
-.bordo:hover{
-    transform: scale(1);
-    transition-duration: 2s;
-    
-}
 
-.bordo{
-    animation-name: moveright;
-    animation-duration: 3s;
-    animation-iteration-count: 1;
-
-}
-
-@keyframes moveright{
-    0%{ margin-left:0px;}
-    100%{margin-left:810px;}
-
-}
