--- a/m2/w2/d3/scompito-d3/css/style.css
+++ b/m2/w2/d3/scompito-d3/css/style.css
@@ -40,9 +40,16 @@ nav {
   nav a {
     color: white;
     text-decoration: none; }
+  nav h1 {
+    font-size: 2rem;
+    margin-top: 15px; }
 
 ul li {
   display: inline; }
+  ul li a {
+    margin-left: 30px;
+    margin-right: 30px;
+    font-size: 1.5rem; }
 
 img {
   margin: 30px 30px 30px 30px; }
