--- a/m2/w2/d3/scompito-d3/scss/style.scss
+++ b/m2/w2/d3/scompito-d3/scss/style.scss
@@ -9,6 +9,8 @@
     background-color: purple;
 }
 
+
+
 .showcase-content{
     display: $dflex;
     flex-direction: $flrow;
@@ -35,13 +37,24 @@ nav{
         color: $wht;
         text-decoration: none;
     }
+    h1{
+        font-size: 2rem;
+        margin-top: 15px;
+    }
 
 }
 ul {
     li{
     display: inline;
+        a{
+            margin-left: 30px;
+            margin-right: 30px;
+            font-size: 1.5rem;
+        }
     }
 }
+        
+
 
 img{
     margin: $mdef;
