--- a/m2/w2/d5/scss/app.scss
+++ b/m2/w2/d5/scss/app.scss
@@ -3,8 +3,11 @@
 @import 'variables';
 @import 'functions';
 
+
+
 header{
     background-color: $prp-bg;
+    color: set-color($prp-bg);
   
     i{
         color: orange;
@@ -14,19 +17,25 @@ header{
 main{
     background-image: url(/img/pexels-aleksandar-pasaric-325185.jpg);
     background-repeat: no-repeat;
-    background-size: cover;
-    height: 800px;
+    background-size: auto;
+    background-position: center;
+    padding-bottom: 200px;
+    
     h1{
         font-size: 3rem;
     }
+    
     .btn-primary{
         background-color:$prp-bg;
         border: 1px solid $prp-bg;
     }
+    
 }
 
 #loremIcon{
-    background-color: #f3f4f5;
+    background-color: $gr-bg;
+    color: set-color($gr-bg);
+    //se si cambia il background-color con uno più scuro si vede che la funzione funziona.
 
 .bi{
     font-size: 4rem;
@@ -35,6 +44,7 @@ main{
 
 footer{
     background-color:$prp-bg;
+
 
 }
 
